<resources>
    <string name="app_name">Cricket</string>
    <string name="action_settings">Settings</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="hint_quantity">0</string>
    <string name="hint_price">$0</string>
    <string name="submit">Submit</string>
    <string name="order">Order</string>
    <string name="exit">Exit</string>
    <string name="thank_you">Thank you!</string>
    <string name="final_price">Final Price</string>
    <string name="total">Total: $</string>
    <string name="total1">total</string>
    <string name="one">1</string>
    <string name="team_1">Team 1</string>
    <string name="_6_points">6 Runs</string>
    <string name="_4_points">4 Runs</string>
    <string name="_1_points">1 Run</string>
    <string name="team_2">Team 2</string>
    <string name="reset">Reset</string>
    <string name="zero">0</string>
</resources>
