<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/vertical_layout_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/team_text_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/scoreBehind"
                android:fontFamily="serif-monospace"
                android:padding="16dp"
                android:text="@string/team_1"
                android:textAlignment="center"
                android:textColor="@color/pointsBlue"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/score_team_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/scoreBehind"
                android:fontFamily="sans-serif"
                android:paddingBottom="24dp"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textColor="@color/scoreBlue"
                android:textSize="56sp" />

            <Button
                android:id="@+id/six_points_button_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/_6_points"
                android:textSize="20sp" />

            <Button
                android:id="@+id/four_points_button_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/_4_points"
                android:textSize="20sp" />

            <Button
                android:id="@+id/one_point_button_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/_1_points"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vertical_layout_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/team_text_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/scoreBehind"
                android:fontFamily="serif-monospace"
                android:padding="16dp"
                android:text="@string/team_2"
                android:textAlignment="center"
                android:textColor="@color/pointsBlue"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/score_team_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/scoreBehind"
                android:fontFamily="sans-serif"
                android:paddingBottom="24dp"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textColor="@color/scoreBlue"
                android:textSize="56sp" />

            <Button
                android:id="@+id/six_points_button_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/_6_points"

                android:textSize="20sp" />

            <Button
                android:id="@+id/four_points_button_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/_4_points"
                android:textSize="20sp" />

            <Button
                android:id="@+id/one_point_button_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/_1_points"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="202dp"
        android:text="@string/reset"
        android:textAlignment="center"
        android:textSize="20sp" />

</RelativeLayout>